2 files modified, 3 added

--- a/src/app/manga-item/manga-item.component.html
+++ b/src/app/manga-item/manga-item.component.html
@@ -5,5 +5,5 @@
 <div *ngIf="expanded">
   <img src="/assets/img/1.jpg" />
   <span>Tomes: {{nbTome()}} / {{manga.list.length}}</span>
-  <button>Editer</button>
+  <button [routerLink]="['/manga', manga.id]">Editer</button>
 </div>
