--- a/src/app/manga-item/manga-item.component.html
+++ b/src/app/manga-item/manga-item.component.html
@@ -3,7 +3,7 @@
 </span>
 
 <div *ngIf="expanded">
-  <img src="/assets/img/1.jpg" />
+  <img src="../assets/img/1.jpg" />
   <span>Tomes: {{nbTome()}} / {{manga.list.length}}</span>
   <button [routerLink]="['/manga', manga.id]">Editer</button>
 </div>
