6 files modified, 3 deleted

--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -6,16 +6,18 @@
     <input id="title" type="text" formControlName="title" />
   </div>
   <div>
+    <div>
+      <label for="editor">
+        Editeur
+      </label>
+      <input id="editor" type="text" formControlName="editor" />
+    </div>
+  </div>
+  <div>
     <label for="nbTome">
       Nombre de tomes
     </label>
     <input id="nbTome" type="number" formControlName="nbTome" />
-  </div>
-  <div>
-    <label for="img">
-      Couverture
-    </label>
-    <input id="img" type="file" (input)="handleFileInput($event.target)" />
   </div>
 
   <button class="button" type="submit">Ajouter</button>
