--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 /* Global Styles */
+@import '~bootstrap/dist/css/bootstrap.min.css';
 
 * {
   font-family: 'Roboto', Arial, sans-serif;
@@ -12,15 +13,6 @@ body {
   margin: 0;
 }
 
-.container {
-  display: flex;
-  flex-direction: row;
-}
-
-router-outlet + *  {
-  padding: 0 16px;
-}
-
 /* Text */
 
 h1 {
@@ -31,7 +23,8 @@ h2 {
   font-size: 20px;
 }
 
-h1, h2 {
+h1,
+h2 {
   font-weight: lighter;
 }
 
@@ -58,7 +51,7 @@ input {
   border-radius: 2px;
   padding: 8px;
   margin-bottom: 16px;
-  border: 1px solid #BDBDBD;
+  border: 1px solid #bdbdbd;
 }
 
 label {
@@ -70,7 +63,8 @@ label {
 }
 
 /* Button */
-.button, button {
+.button,
+button {
   display: inline-flex;
   align-items: center;
   padding: 8px 16px;
@@ -82,12 +76,14 @@ label {
   border: none;
 }
 
-.button:hover, button:hover {
+.button:hover,
+button:hover {
   opacity: 0.8;
   font-weight: normal;
 }
 
-.button:disabled, button:disabled {
+.button:disabled,
+button:disabled {
   opacity: 0.5;
   cursor: auto;
 }
@@ -121,22 +117,6 @@ app-top-bar h1 {
   color: white;
   margin: 0;
 }
-
-/* Checkout Cart, Shipping Prices */
-
-.cart-item, .shipping-item {
-  width: 100%;
-  min-width: 400px;
-  max-width: 450px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding: 16px 32px;
-  margin-bottom: 8px;
-  border-radius: 2px;
-  background-color: #EEEEEE;
-}
-
 
 /*
 Copyright Google LLC. All Rights Reserved.
